<resources>
    <string name="app_name">Homework2</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="plus">+</string>
    <string name="minus">—</string>
    <string name="multiply">*</string>
    <string name="division">/</string>
    <string name="equals">=</string>
    <string name="clear">AC</string>
    <string name="plus_minus">+/-</string>
    <string name="percent">%</string>
    <string name="result">Calculator results</string>
    <string name="operation_first_symbol_error">Операция не может быть первым символом.</string>
    <string name="two_operations_error">Не может быть 2 операции подряд</string>
    <string name="theme_one">THEME ONE</string>
    <string name="theme_two">THEME TWO</string>
    <string name="preferences">PREFERENCES</string>
</resources>