<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/calc_theme"
    android:padding="8dp"
    >

    <TextView
        android:id="@+id/resultField"
        android:paddingHorizontal="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/resultTextSize"
        android:text="@string/zero"
        android:textAlignment="textEnd"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <LinearLayout
        android:id="@+id/firstButtonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/resultField"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:background="@drawable/rectangle"
            android:id="@+id/clear"
            style="@style/calc_land_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/clear"/>
        <Button
            android:background="@drawable/rectangle"
            android:id="@+id/plusminus"
            style="@style/calc_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/plus_minus" />
        <Button
            android:background="@drawable/rectangle"
            android:id="@+id/division"
            style="@style/calc_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/division" />
        <Button
            android:background="@drawable/rectangle"
            android:id="@+id/multiply"
            style="@style/calc_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/multiply" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/secondButtonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/firstButtonPanel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <Button
            android:background="@drawable/rectangle"
            android:id="@+id/seven"
            style="@style/calc_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/seven" />
        <Button
            android:background="@drawable/rectangle"
            android:id="@+id/eight"
            style="@style/calc_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/eight" />
        <Button
            android:background="@drawable/rectangle"
            android:id="@+id/nine"
            style="@style/calc_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nine" />
        <Button
            android:background="@drawable/rectangle"
            android:id="@+id/percent"
            style="@style/calc_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/percent" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/thirdButtonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/secondButtonPanel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <Button
            android:background="@drawable/rectangle"
            android:id="@+id/four"
            style="@style/calc_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/four" />
        <Button
            android:background="@drawable/rectangle"
            android:id="@+id/five"
            style="@style/calc_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/five" />
        <Button
            android:background="@drawable/rectangle"
            android:id="@+id/six"
            style="@style/calc_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/six" />
        <Button
            android:background="@drawable/rectangle"
            android:id="@+id/plus"
            style="@style/calc_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/forthButtonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/thirdButtonPanel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <Button
            android:background="@drawable/rectangle"
            android:id="@+id/one"
            style="@style/calc_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/one" />
        <Button
            android:background="@drawable/rectangle"
            android:id="@+id/two"
            style="@style/calc_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/two"/>
        <Button
            android:background="@drawable/rectangle"
            android:id="@+id/three"
            style="@style/calc_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/three"/>
        <Button
            android:background="@drawable/rectangle"
            android:id="@+id/minus"
            style="@style/calc_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/minus"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ffithButtonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/forthButtonPanel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <Button
            android:background="@drawable/rectangle"
            android:id="@+id/zero"
            style="@style/calc_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/zero" />
        <Button
            android:background="@drawable/rectangle"
            android:id="@+id/dot"
            style="@style/calc_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dot"/>
        <Button
            android:background="@drawable/rectangle"
            android:id="@+id/equal"
            style="@style/calc_equal_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/equals"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>